--- a/math-ph-9902027/gauge.tex
+++ b/math-ph-9902027/gauge.tex
@@ -39,17 +39,17 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[utf8]{inputenc}
-%a\usepackage[T1]{fontenc}
+%\usepackage[T1]{fontenc}
 %\usepackage[altbullet]{lucidabr}
 \usepackage[largesc]{newpxtext}
 \usepackage{eulervm}
-%\usepackage[smallerops]{newpxmath}
+\usepackage[smallerops]{newpxmath}
 \linespread{1.05}
 \usepackage[papersize={7.2in, 10in}, left=.6in, right=.6in, top=1in, bottom=1in]{geometry}
 \sloppy
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/lucidasum}
+%\input{../helpers/lucidasum}
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
@@ -3208,10 +3208,10 @@ and to \(\gr_1(L)=-\gr(L)'\otimes I + I\otimes\gr(L)\),
  one sees that the
 last two term are also zero and so
  \(\nabla_\cX t=0\). From this we get
- \(\cX\!<f,s>=\nabla_\cX (t(f\otimes s)) =
+ \(\cX\!\langle f,s \rangle =\nabla_\cX (t(f\otimes s)) =
 t(\nabla_\cX(f\otimes s))\), and so \[
-\cX\!<f,s> =
-<\nabla_\cX f,s> + <f,\nabla_\cX s>
+\cX\!\langle f,s\rangle =
+\langle\nabla_\cX f,s\rangle + \langle f,\nabla_\cX s \rangle
 \]
 
 
@@ -3362,8 +3362,8 @@ non-degenerate symmetric bilinear form \(g(x)\), called the {\em
 pseudo-metric\/}
 \index{pseudo-metric}%
  defined in each tangent
-space \(T_xM\). We shall often write \(<v,w>_x\)
-\index{\(V,W_X\)@\(<v,w>_x\)}%
+space \(T_xM\). We shall often write \(\ \langle v,w \rangle_x\)
+\index{\(V,W_X\)@\(\ \langle v,w \rangle_x\)}%
  in place of
 \(g(x)(v,w)\) and often suppress mention of the point \(x\). We shall
 assume that \(g(x)\) is a \(\cC^\infty\) function of \(x\) by which we
@@ -3431,7 +3431,7 @@ one
 can, by appropriate linear combinations of any set of local coordinates, 
 introduce  coordinates \(x^1,\dots,x^n\) such that
 \begin{equation}\label{eq:pteta}%
-<\ppv{x}{i}, \ppv{x}{j}>_{x_0}=\eta_{ij}
+\langle\ppv{x}{i}, \ppv{x}{j}\rangle_{x_0}=\eta_{ij}
 \end{equation}%
 It should be emphasized that in general it is impossible to introduce
 local coordinates so that (\ref{eq:pteta}) hold at all points in a
@@ -3441,7 +3441,7 @@ In any case, consider the vectors fields \(v_i = \ppv{x}{i}\).
  In a small enough neighborhood of \(x_0\) one can apply the
 usual Gram-Schmidt orthonormalization procedure to \(v_1,\dots,v_n\)
 to obtain vector
-fields \(e_1,\dots,e_n\) such that \(<e_i,e_j> = \eta_{ij}\). Such a
+fields \(e_1,\dots,e_n\) such that \(\langle e_i,e_j \rangle = \eta_{ij}\). Such a
 set of vector fields is called a (local) 
 \index{nbein@\(n\)-bein}%
 {\em \(n\)-bein\/}.
@@ -3500,25 +3500,25 @@ the tangent and cotangent bundles in these are always isomorphic
 vector bundles.
 
 By a deliberate abuse of notation we shall also denote by
-\(<\cdot,\cdot>\) the duality between \(T^*_xM \) and \(T_xM\), that is
-if \(\alpha\in T^*_xM\) and \(v\in T_xM\) we shall write \(<\alpha,v>\)
-for \(\alpha(v)\). We shall also write \(<v,\alpha>\) for the same
+\(\langle\cdot,\cdot\rangle\) the duality between \(T^*_xM \) and \(T_xM\), that is
+if \(\alpha\in T^*_xM\) and \(v\in T_xM\) we shall write \(\langle\alpha,v\rangle\)
+for \(\alpha(v)\). We shall also write \(\langle v,\alpha\rangle\) for the same
 thing.
 
 Given a pseudo-Riemannian structure \(g\) one can define a map
 \(\ell:T_xM \to T^*_xM\)
 \index{\(L\)@\(\ell\)}% 
-by the relation \(\ell(v)(w) = <v,w>\) for all
+by the relation \(\ell(v)(w) =  \langle v,w \rangle\) for all
 \(w\in T_xM\). By our abuse of notation this can be written as
-\(<\ell(v), w> = <v,w>\). One also has the inverse map \(r:T^*_xM \to
+\(\langle\ell(v), w\rangle = \ \langle v,w \rangle\). One also has the inverse map \(r:T^*_xM \to
 T_xM\)
 \index{\(R\)@\(r\)}% 
-defined by \(<r(\alpha),v> = \alpha(v)\) 
+defined by \(\langle r(\alpha),v\rangle = \alpha(v)\) 
 which by our abuse of
-notation can also be expressed as \(<r(\alpha),v> = <\alpha,v>\).
+notation can also be expressed as \(\langle r(\alpha),v \rangle = \langle \alpha,v \rangle\).
 Obviously \(r\) and \(\ell\) are inverses of each other. These maps can
 be used to introduce a non-degenerate symmetric bilinear form in
-each \(T^*_xM\) by the formula \(<\alpha,\beta> = <r(\alpha),r(\beta)>\).
+each \(T^*_xM\) by the formula \(\langle\alpha,\beta \rangle = \langle r(\alpha),r(\beta) \rangle\).
 
 It is useful to determine local expressions for these maps and bilinear
 forms in any  trivialization of \(TM\) and \(T^*M\).  Such a 
@@ -3528,13 +3528,13 @@ open set such that at any point \(x\) they form a basis for \(T_xM\). Let
 
 Define
 \[
-g_{ij} = <e_i,e_j>
+g_{ij} = \langle e_i,e_j \rangle
 \]
 \index{\(G_{ij}\)@\(g_{ij}\)}%
 If now \(v=\sum_i v^ie_i\) and \(w = \sum_iw^ie_i\) then
 one has 
 \[
-<v,w> = \sum_{ij}g_{ij}v^iw^j
+\ \langle v,w \rangle = \sum_{ij}g_{ij}v^iw^j
 \]
  One will also have 
 \[
@@ -3543,18 +3543,18 @@ r(e^i)
 \]
  for some matrix \(g^{ij}\).
 \index{\(G^{ij}\)@\(g^{ij}\)}% 
-From \(<r(e^i),e_j> = <e^i,e_j> = \delta^i{}_j\)
+From \(\langle r(e^i),e_j \rangle = \langle e^i,e_j \rangle = \delta^i{}_j\)
  one deduces \(\sum_k g^{ik}g_{kj} = \delta^i{}_j\)
 so \(g^{ij}\) is the matrix inverse
 of \(g_{ij}\). One has for \(\alpha = \sum_i\alpha_ie^i\) and \(\beta =
 \sum_i\beta_ie^i\) that 
 \[
-<\alpha,\beta> =
+\langle\alpha,\beta\rangle =
 \sum_{ij}g^{ij}\alpha_i\beta_j
 \]
  Of course, by definition, 
 \[
-<\alpha,v> =
+\langle\alpha,v\rangle =
 \sum_i\alpha_iv^i
 \]
 
@@ -3690,11 +3690,11 @@ in the space of exterior
 \(p\)-covectors \(\bigwedge^p(T_x^*M)\) at a point \(x\in M\) by
 the formula
 \[%
-<\alpha_1\wedge\cdots\wedge\alpha_p , \beta_1\wedge\cdots\wedge\beta_p> =
-\det _{ij}<\alpha_i,\beta_j>
+\langle\alpha_1\wedge\cdots\wedge\alpha_p , \beta_1\wedge\cdots\wedge\beta_p\rangle =
+\det _{ij}\langle\alpha_i,\beta_j\rangle
 \]%
 where the right-hand side is the determinant of the matrix
-\(<\alpha_i,\beta_j>\).
+\(\langle\alpha_i,\beta_j\rangle\).
 This in turn defines the {\em Hodge star\/}
 \index{Hodge star}%
  operator
@@ -3704,7 +3704,7 @@ This in turn defines the {\em Hodge star\/}
 \]
 by the relation
 \begin{equation}\label{eq:hodgestar}%
-\phi \wedge *\psi = <\phi,\psi>\Omega
+\phi \wedge *\psi = \langle \phi,\psi \rangle\Omega
 \end{equation}%
 for any two  exterior \(p\)-forms \(\phi\) and \(\psi\). One obviously has
 \(*1=\Omega\).
@@ -3712,7 +3712,7 @@ One can get a concrete idea of the Hodge operator by considering an
 orthonormal basis 
  \(e_1,\dots,e_n\) of the tangent space at a point. Let \(e^a = r(e_a)\), 
 be the corresponding covectors.
-One has \(<e^a,e^b> = \eta^{ab}\) where \(\eta^{ab}\) is the inverse
+One has \(\langle e^a,e^b\rangle = \eta^{ab}\) where \(\eta^{ab}\) is the inverse
 matrix of \(\eta_{ab}\), obviously equal to it, introduced for
 notational convenience. One has \(dx^i = \sum_ah^i{}_ae^a\) for some
 matrix of coefficients \(h^i{}_a\). Thus \(\Omega =
@@ -5962,13 +5962,13 @@ field \(\lF\), then we denote by \(W'\)
 \index{\(W'\)}%
  its dual, that is, the set of
 linear maps \(\phi:W\to \lF\). We shall sometimes denote  \(\phi(w)\)
-by \(<\phi,w>\). Suppose \(W\) finite dimensional and let 
+by \(\langle \phi,w \rangle\). Suppose \(W\) finite dimensional and let 
 \(e_1,\dots,e_n\) be a basis. We denote by \(e^1,\dots,e^n\) the
 corresponding dual basis,
 \index{basis!dual}%
  that is, one defined by
 \[
-<e^i,e_j> = \delta^i{}_j
+\langle e^i,e_j \rangle = \delta^i{}_j
 \]
 where the {\em Kroneker
 symbol\/} 
@@ -5992,7 +5992,7 @@ what \(\phi_1\wedge\phi_2\wedge\cdots\wedge\phi_p\) means as an anti-symmetric
 \(p\)-linear form on \(W\) is 
 \begin{equation}\label{eq:pformcon}%
 (\phi_1\wedge\phi_2\wedge\cdots\wedge\phi_p)(w_1,w_2,\dots,w_p) =
-\det_{ij}<\phi_i,w_j>
+\det_{ij}\langle\phi_i,w_j\rangle
 \end{equation}%
 where by \(\det_{ij}a_{ij}\) we mean the determinant of the matrix
 \(a_{ij}\). There is a contending convention in which the right-hand side
