--- a/math-ph-9902027/gauge.tex
+++ b/math-ph-9902027/gauge.tex
@@ -39,10 +39,10 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[utf8]{inputenc}
-%\usepackage[T1]{fontenc}
+\usepackage[T1]{fontenc}
 %\usepackage[altbullet]{lucidabr}
 \usepackage[largesc]{newpxtext}
-\usepackage{eulervm}
+%\usepackage{eulervm}
 \usepackage[smallerops]{newpxmath}
 \linespread{1.05}
 \usepackage[papersize={7.2in, 10in}, left=.6in, right=.6in, top=1in, bottom=1in]{geometry}
@@ -5961,7 +5961,7 @@ If \(W\) is a vector space over a
 field \(\lF\), then we denote by \(W'\)
 \index{\(W'\)}%
  its dual, that is, the set of
-linear maps \(\phi:W\to \lF\). We shall sometimes denote  \(\phi(w)\)
+linear maps \(\phi : W\to \lF\). We shall sometimes denote  \(\phi(w)\)
 by \(\langle \phi,w \rangle\). Suppose \(W\) finite dimensional and let 
 \(e_1,\dots,e_n\) be a basis. We denote by \(e^1,\dots,e^n\) the
 corresponding dual basis,
