--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -17,6 +17,7 @@ bookmarksopenlevel=10
 \usepackage[T1]{fontenc}
 \usepackage[largesc]{newpxtext}
 \usepackage[smallerops]{newpxmath}
+\usepackage[cal=cm]{mathalfa}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
