--- a/math-ph-9902027/gauge.tex
+++ b/math-ph-9902027/gauge.tex
@@ -41,15 +41,18 @@ bookmarksopenlevel=10
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 %\usepackage[altbullet]{lucidabr}
-\usepackage[largesc]{newpxtext}
-%\usepackage{eulervm}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[largesc,theoremfont]{newpxtext}
 \usepackage[smallerops]{newpxmath}
+\usepackage{newpxmath}
+\usepackage[cal=cm]{mathalfa}
+%\usepackage{eulervm}
 \linespread{1.05}
 \usepackage[papersize={7.2in, 10in}, left=.6in, right=.6in, top=1in, bottom=1in]{geometry}
 \sloppy
 
 % these include amsmath and that can cause trouble in older docs.
-%\input{../helpers/lucidasum}
+\input{../helpers/lucidasum}
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
