--- a/hott-book/main.tex
+++ b/hott-book/main.tex
@@ -60,8 +60,7 @@
 \usepackage[scaled=0.95]{helvet}
 \usepackage{courier}
 \linespread{1.05} % Palatino looks better with this
-\usepackage{eulervm}
-\input ../helpers/lucidasum.tex
+%\input ../helpers/lucidasum.tex
 
 \usepackage{ifpdf}
 
@@ -75,6 +74,8 @@
 \usepackage{nextpage} % So we can jump to odd-numbered pages
 
 \usepackage{amssymb,amsmath,amsthm,stmaryrd,mathrsfs,wasysym}
+\usepackage{eulervm}
+
 \usepackage{enumitem,mathtools,xspace}
 \usepackage{xstring} % For generating singluars and plurals in \backref
 
