--- a/superposition/sup2.tex
+++ b/superposition/sup2.tex
@@ -1,5 +1,11 @@
 \documentclass[20pt]{extreport}
 
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[altbullet]{lucidabr}
+%\usepackage[largesc]{newpxtext}
+\usepackage{eulervm}
+
 \def\a{|\psi_1\rangle}
 \def\b{|\psi_2\rangle}
 \def\la{\langle \psi_1}
@@ -8,6 +14,19 @@
 \def\db{|M_{2}\rangle}
 \def\m0{| M_0 \rangle}
 \def\M0{ M_0 }
+
+\makeatletter
+
+\@ifpackageloaded{amsmath}{}{\RequirePackage{amsmath}}
+\DeclareSymbolFont{Llargesymbols}{OMX}{hlcv}{m}{n}
+\DeclareMathSymbol{\Sigma}{\mathord}{Llargesymbols}{'326}
+\DeclareMathSymbol{\sum@}{\mathop}{Llargesymbols}{"50}
+\DeclareMathSymbol{\prod@}{\mathop}{Llargesymbols}{"51}
+\DeclareMathSymbol{\Pi}{\mathord}{Llargesymbols}{'325}
+
+\makeatother
+
+
 \begin{document}
 
 $$\displaystyle \psi  \otimes \M0 = \big(\sum_n c_n\psi_n\big) \otimes \M0 \to  \sum_n (c_n \psi_n  \otimes M_n)
