--- a/superposition/sup.tex
+++ b/superposition/sup.tex
@@ -8,6 +8,25 @@
 \def\db{|M_{2}\rangle}
 \def\m0{| M_0 \rangle}
 \def\M0{ M_0 }
+
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[altbullet]{lucidabr}
+%\usepackage[largesc]{newpxtext}
+\usepackage{eulervm}
+
+\makeatletter
+
+\@ifpackageloaded{amsmath}{}{\RequirePackage{amsmath}}
+\DeclareSymbolFont{Llargesymbols}{OMX}{hlcv}{m}{n}
+\DeclareMathSymbol{\Sigma}{\mathord}{Llargesymbols}{'326}
+\DeclareMathSymbol{\sum@}{\mathop}{Llargesymbols}{"50}
+\DeclareMathSymbol{\prod@}{\mathop}{Llargesymbols}{"51}
+\DeclareMathSymbol{\Pi}{\mathord}{Llargesymbols}{'325}
+
+\makeatother
+
+
 \begin{document}
 $$\displaystyle |\psi\rangle \m0 = (\a + \b)\m0 \to   \a\da + \b\db
 $$
