--- a/math-9404236/math-9404236.tex
+++ b/math-9404236/math-9404236.tex
@@ -13,8 +13,10 @@
 %% Include files necessary for this article: bull-art.tex
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentstyle{amsart}
-\input{bull-art}
+\documentclass[12pt]{amsart}
+%\input{bull-art}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 
 %\let\text\mbox
 \begin{document}
@@ -27,7 +29,7 @@
 \title{On proof and progress in mathematics}
 \author{William P. Thurston}
 \date{October 26, 1993}
-\subjclass{Primary 01A80}
+%\subjclass{Primary 01A80}
 \maketitle
 
 This essay on the nature of proof and progress in 
@@ -348,10 +350,10 @@ mathematical language of symbols is closely tied to our
 human language facility.
 The fragment of mathematical symbolese available to most 
 calculus students
-has only one verb, ``\<$=$''.  That's why students use it
+has only one verb, ``$=$''.  That's why students use it
 when they're in need of a verb.  Almost anyone who has 
 taught calculus
-in the U.S. has seen students instinctively write ``\<$x^3 
+in the U.S. has seen students instinctively write ``$x^3 
 = 3 x^2$'' and the
 like.
 \item  Vision, spatial sense, kinesthetic (motion) sense.
@@ -1422,7 +1424,7 @@ Overwhelmingly, the feedback ran something like ``Your
 notes are
 really inspiring and beautiful, but I have to tell you 
 that we spent
-3 weeks in our seminar working out the details of \S\<$n.n$.
+3 weeks in our seminar working out the details of \S$n.n$.
 More explanation would sure help.''
 
 I also gave many presentations to groups of mathematicians
