--- a/math-9404236/math-9404236.tex
+++ b/math-9404236/math-9404236.tex
@@ -13,8 +13,13 @@
 %% Include files necessary for this article: bull-art.tex
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[12pt]{amsart}
+\documentclass[12pt,oneside]{amsart}
 %\input{bull-art}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[largesc]{newtxtext}
+\usepackage[smallerops]{newtxmath}
+\usepackage[cal=cm]{mathalfa}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 
@@ -37,7 +42,7 @@ mathematics was
 stimulated by the article of Jaffe and Quinn, 
 ``Theoretical Mathematics: 
 Toward a cultural synthesis of mathematics and theoretical 
-physics".
+physics''.
 Their article raises interesting issues that 
 mathematicians should pay more
 attention to, but it also perpetuates some widely held
@@ -141,7 +146,7 @@ only to find that their printout isn't
 something they really wanted after all.  They discover by 
 this kind of
 experience that what they really want is usually not some
-collection of ``answers"---what they want is {\it 
+collection of ``answers''---what they want is {\it 
 understanding}. 
 
 \bigskip
@@ -197,7 +202,7 @@ holds that
 \item[\bf D.]
  mathematicians start from a few basic mathematical 
 structures
-and a collection of axioms ``given" about these 
+and a collection of axioms ``given'' about these 
 structures, that 
 \item[\bf T.]
 there are various important questions 
@@ -328,7 +333,7 @@ computer with a
 single central processing unit.  Our brains and minds seem 
 to be
 organized into a variety of separate, powerful facilities.
-These facilities work together loosely, ``talking" to each 
+These facilities work together loosely, ``talking'' to each 
 other at
 high levels rather than at low levels of organization.
 
@@ -345,7 +350,7 @@ example is the quadratic formula which people may remember
 as a little chant,
 ``ex equals minus bee plus or minus the square root of bee 
 squared
-minus four ay see all over two ay."   The
+minus four ay see all over two ay.''   The
 mathematical language of symbols is closely tied to our 
 human language facility.
 The fragment of mathematical symbolese available to most 
@@ -419,7 +424,7 @@ building and testing connections
 and comparisons, holding two things in mind at the same 
 time (metaphor).
 These facilities are quite important for mathematics.  
-Personally, I put a lot of effort into ``listening" to my 
+Personally, I put a lot of effort into ``listening'' to my 
 intuitions and 
 associations, and building them into metaphors and 
 connections. This involves
@@ -490,7 +495,7 @@ embarrassment.
 
 This pattern is similar to what often holds in 
 classrooms, where we go through the motions of 
-saying for the record what we think the students ``ought" 
+saying for the record what we think the students ``ought'' 
 to learn,
 while the students are trying to grapple with the more 
 fundamental issues of
@@ -500,7 +505,7 @@ by giving samples of how to solve every type of homework
 problem.
 Professors compensate by giving homework and tests that 
 are much easier than
-the material ``covered" in the course, and then grading 
+the material ``covered'' in the course, and then grading 
 the homework
 and tests on a scale that requires little understanding.
 We assume that the problem is with the students rather 
@@ -691,9 +696,9 @@ into mathematics.
 Second, mathematicians sometimes invent names
 and hit on unifying definitions that replace technical
 circumlocutions and give good handles for insights.  
-Names like ``group" to replace ``a system of substitutions 
-satisfying \dots", 
-and ``manifold" to replace 
+Names like ``group'' to replace ``a system of substitutions 
+satisfying \dots'', 
+and ``manifold'' to replace
 \begin{quote}
 We can't give coordinates to
 parametrize all the solutions to our equations 
