--- a/1410.5226/SingularityMilestone4.tex
+++ b/1410.5226/SingularityMilestone4.tex
@@ -53,6 +53,53 @@
 
 \usepackage{rotating,wasysym}
 
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+
+
+% these include amsmath and that can cause trouble in older docs.
+\makeatletter
+
+\DeclareSymbolFont{Llargesymbols}{OMX}{hlcv}{m}{n}
+\DeclareMathSymbol{\Sigma}{\mathord}{Llargesymbols}{'326}
+\DeclareMathSymbol{\sum@}{\mathop}{Llargesymbols}{"50}
+\DeclareMathSymbol{\prod@}{\mathop}{Llargesymbols}{"51}
+\DeclareMathSymbol{\Pi}{\mathord}{Llargesymbols}{'325}
+
+\makeatother
+
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \def\unwarrow{\nwarrow\joinrel\joinrel\uparrow}
 \def\unearrow{\uparrow\joinrel\joinrel\nearrow}
 \def\dswarrow{\swarrow\joinrel\joinrel\downarrow}
@@ -107,6 +154,8 @@ We review the first modern singularity theorem, published by Penrose in 1965. Th
 %\submitto{\JPA}
 % Comment out if separate title page not required
 %\maketitle
+
+\newpage
 
 \section{Introduction}\label{sec:intro}
 1965 is an important year in the history of General Relativity (GR), which underwent a very important revival period during the entire 1960 decade. The discovery and interpretation of the Cosmic Background Radiation \cite{PW,DPRW} and the first modern singularity theorem  \cite{P} were published in 1965 ---though both findings happened in 1964--- a year not only right in the middle of that decade, but also exactly 50 years after the birth of Einstein's field equations
@@ -543,8 +592,8 @@ All singularity theorems {\em necessitate} a condition involving the Riemann ten
 usually presented under the names of ``energy'' and/or ``generic'' conditions but, as explained in formula (\ref{sec}), this assumption is of a {\em geometric nature}. Mostly, the used conditions are (\ref{sec}) and (\ref{gen}) or appropriate averaged versions thereof. The generic condition (\ref{gen}) is rarely violated, only in very special or symmetric situations fails. 
 An interesting example is provided by the Einstein static universe: it contains trapped sets (compact slices, and points with reconverging light cones), satisfies (\ref{sec}) and is globally hyperbolic, yet it is geodesically complete. 
 
-Condition (\ref{sec}) can be re-expressed using (\ref{efe}), but only in GR. However, (\ref{sec})  depends then on the sign of $\Lambda$ and today we know that $\Lambda> 0$, just the ÃwrongÃ
-sign for the theorems. Alternative or more general theories of gravity retain the theorems, but their formulation in terms of ``energy" conditions depends on the field equations of the particular theory. 
+Condition (\ref{sec}) can be re-expressed using (\ref{efe}), but only in GR. However, (\ref{sec})  depends then on the sign of $\Lambda$ and today we know that $\Lambda > 0$, just the ``wrong''
+sign for the theorems. Alternative or more general theories of gravity retain the theorems, but their formulation in terms of ``energy'' conditions depends on the field equations of the particular theory. 
 
 Even in GR and independently of $\Lambda$ the curvature assumption does not always hold \cite{HE,S1} {\em classically}, such as for scalar fields and other realistic type of matter. Actually, inflationary cosmological models violate it. Notice, however, that as discussed in the previous list of improved theorems, some of them deal successfully  with this problem. For a wider discussion on energy conditions see \cite{Vi}, in relation with the theorems \cite{S1}, and for a more recent perspective \cite{Cu}. 
 
@@ -1056,7 +1105,7 @@ Isolated, slowly evolving, and dynamical trapping horizons: geometry and mechani
 \bibitem{BV3} Borde A and Vilenkin A 1997 Violation of the weak energy condition in inflating spacetimes {\it Phys. Rev. D} {\bf 56}, 717.%Violacion de WEC.
 \bibitem{Brady} Brady P. and Smith J. 1995 Black hole singularities: a numerical approach {\it Phys. Rev. Lett.} {\bf 75}, 1256
 \bibitem{Bray} Bray H L 2001 Proof of the Riemannian Penrose inequality using the positive mass theorem {\it Journal of Differential Geometry} {\bf 59} 177
-\bibitem{BrCh} Bray H L and Chru\'{s}ciel P T 2004 The Penrose inequality, in {\it The Einstein equations and the large scale behavior of gravitational fields} 39Ð70 (Birkhuser, Basel)
+\bibitem{BrCh} Bray H L and Chru\'{s}ciel P T 2004 The Penrose inequality, in {\it The Einstein equations and the large scale behavior of gravitational fields} 39Ð70 (Birkhauser, Basel)
 \bibitem{CG} Cai M and Galloway G J 2001 On the topology and area of higher dimensional black holes {\it Class. Quantum Grav.} {\bf 18} 2707--2718.%Topology of horizon
 \bibitem{CM} Carrasco A and Mars M 2009 Stability of marginally outer trapped surfaces and symmetries, {\it Class. Quantum Grav.} {\bf 26} 175002 
 \bibitem{Ca0} Carter B 1966 Complete analytic extension of the symmetry axis of Kerr's solution of Einstein's equations. {\it Phys. Rev.} {\bf 141} 1242--1247
@@ -1164,7 +1213,7 @@ English translation reprinted in 1999 {\it Gen. Relat. Grav.} {\bf 31} 2001-2008
 \bibitem{Frie} Friedrich H 1992 Asymptotic structure of space-time in {\it Recent advances in general relativity} Einstein Stud., {\bf 4}, (Birkh\"auser Boston, Boston) 146--181
 \bibitem{Frie1} Friedrich H 1998 Einstein's equation and conformal structure, in {\it The geometric universe}  (Oxford Univ. Press, Oxford)  81--98
 \bibitem{Frie2} Friedrich H 2002 Conformal Einstein evolution in {\it The conformal structure of space-time} Lecture Notes in Phys., {\ bf 604} (Springer, Berlin) 1--50
-\bibitem{Frie3} Friedrich H 2004 Smoothness at null infinity and the structure of initial data, in {\it The Einstein Equations and the Large Scale Behaviour of Gravitational Fields.} (Basel: BirkhÂuser) 121--203
+\bibitem{Frie3} Friedrich H 2004 Smoothness at null infinity and the structure of initial data, in {\it The Einstein Equations and the Large Scale Behaviour of Gravitational Fields.} (Basel: Birkhauser) 121--203
 \bibitem{FKLMS} Fuchs H, Kasper U, Liebscher D E, Muller V and Schmidt H-J 1988 Fortschr. Phys. {\bf 36} 427-452
 \bibitem{GJR} Gabach Clement M E, Jaramillo J L and Reiris M 2013
 Proof of the area-angular momentum-charge inequality for axisymmetric black holes
@@ -1304,7 +1353,7 @@ solution found {\it Nature} {\bf 345} 201
 \bibitem{Mars} Mars M 2009 Present status of the Penrose inequality {\it Class. Quantum Grav.} {\bf 26} 193001
 \bibitem{Mars1} Mars M 2012 Stability of MOTS in totally geodesic null horizons {\it Class. Quantum Grav.} {\bf 29} 145019
 \bibitem{MMV} Mars M, Mena F C, and Vera R. 2013 Review on exact and perturbative deformations
-of the Einstein-Straus model: uniqueness and rigidity results {\it Gen. Relativ. Gravit.} {\bf 45} 2143Ã2173
+of the Einstein-Straus model: uniqueness and rigidity results {\it Gen. Relativ. Gravit.} {\bf 45} 2143--2173
 \bibitem{MS} Mars M and Senovilla J M M 2003 Trapped surfaces and symmetries {\it Class. Quantum Grav.}  {\bf 20} L293.
 \bibitem{Ming} Minguzzi E 2013 Convex neighborhoods for Lipschitz connections and sprays;  arXiv:1308.6675
 %\bibitem{Mingu} Minguzzi E Chronological spacetimes without lightlike lines are stably causal...
@@ -1333,7 +1382,7 @@ R1754.%Generic-ness of null sing.
 \bibitem{PTW} Pelath M A, Tod K P and Wald R W 1998 Trapped surfaces in prolate collapse in the Gibbons-Penrose construction {\it Class. Quantum Grav.} {\bf 15} 3917-3934
 \bibitem{P0} Penrose R 1963 Asymptotic properties of fields and space-times.  {\it Phys. Rev. Lett.} {\bf 10}  66--68
 \bibitem{P00} Penrose R 1964 Conformal treatment of infinity, in {\it Relativity Groups and Topology} eds. C M de Witt and
-B de Witt (New York: Gordon and Breach) pp. 566Ã84
+B de Witt (New York: Gordon and Breach) pp. 566--584
 \bibitem{P2} Penrose R 1965 A remarkable property of plane waves in General Relativity {\it Rev. Mod. Phys.} {\bf 37}, 215.
 \bibitem{P} Penrose R 1965 Gravitational 
 collapse and space-time singularities {\it Phys. Rev. Lett.} {\bf 14}, 57
@@ -1384,7 +1433,7 @@ Phys. Rev. Lett.} {\bf 81} 5031
 \bibitem{SY2} Schoen R and Yau S T 1981 Proof of the positive mass theorem. II. 
 {\it Commun. Math. Phys.} {\bf 79} 231--260. 
 \bibitem{SY} Schoen R and Yau S T 1983 The existence of a black hole due to condensation of matter {\it Commun. Math. Phys.} {\bf 90} 575-579
-\bibitem{Sch} Schwarzschild K. 1916 \"Uber das Gravitationsfeld eines Massenpunktes nach der Einsteinschen Theorie {\it Sitzungsberichte der KÂniglich Preussischen Akademie der Wissenschaften
+\bibitem{Sch} Schwarzschild K. 1916 \"Uber das Gravitationsfeld eines Massenpunktes nach der Einsteinschen Theorie {\it Sitzungsberichte der Kaniglich Preussischen Akademie der Wissenschaften
 zu Berlin. Phys. Math.} Klasse 189; English translation as a Golden Oldie 2003
 Gen. Rel. Grav. {\bf 35}  951 
 \bibitem{SS} Scott S M and Szekeres P 1986 The Curzon singularity I: spatial sections; II: The global picture {\it Gen. Rel. Grav.} {\bf 18} 557, 571.% AnÂlisis de la sing. direccional en Curzon.
