--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -18,10 +18,10 @@ bookmarksopenlevel=10
 \usepackage[largesc]{newpxtext}
 \usepackage[smallerops]{newpxmath}
 \usepackage[cal=cm]{mathalfa}
-\linespread{1.05}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
