--- a/math-0603190v5/rel_sing.tex
+++ b/math-0603190v5/rel_sing.tex
@@ -1,5 +1,42 @@
 %
-\documentclass[10pt]{amsart}
+\documentclass[12pt]{amsart}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+
+\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/lucidasum}
+\input{../helpers/fix-underbrace.tex}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% packages %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -148,7 +185,7 @@ of a timelike curve $c:[a,b] \to M$ is interpreted as the {\bf proper time} meas
 Null curves, on the other hand, represent motions at the speed of light, and null geodesics represent the motions of light rays.
 \end{Example}
 
-\begin{figure}[h!]
+\begin{figure}[ht]
 \begin{center}
 \psfrag{timelike}{timelike}
 \psfrag{null}{null}
