--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -19,6 +19,7 @@ bookmarksopenlevel=10
 \usepackage[smallerops]{newpxmath}
 \usepackage[cal=cm]{mathalfa}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
