--- a/math-0603190v5/rel_sing.tex
+++ b/math-0603190v5/rel_sing.tex
@@ -24,7 +24,7 @@ bookmarksopenlevel=10
 \raggedbottom
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/lucidasum}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 % make sure there is enough TOC for reasonable pdf bookmarks.
