--- a/gr-qc-9712019v1/grnotes.tex
+++ b/gr-qc-9712019v1/grnotes.tex
@@ -22,6 +22,11 @@ bookmarksopenlevel=10
 \linespread{1.05}
 \usepackage{graphicx}
 \usepackage{latexsym}
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
 \begin{document}
 
