--- a/gr-qc-0103044v6/einstein_arxiv_6.tex
+++ b/gr-qc-0103044v6/einstein_arxiv_6.tex
@@ -283,7 +283,7 @@ not done so yet.  Here it is:
 \begin{quote}
 Given a small ball of freely falling test particles initially at rest
 with respect to each other, the rate at which it begins to shrink is
-proportional to its volume times: the energy density at the center of
+proportional to its volume times the energy density at the center of
 the ball, plus the pressure in the $x$ direction at that point, plus
 the pressure in the $y$ direction, plus the pressure in the $z$
 direction.
@@ -315,7 +315,7 @@ same in every direction:
 \begin{quote}
 Given a small ball of freely falling test particles initially at rest
 with respect to each other, the rate at which it begins to shrink is
-proportional to its volume times: the energy density at the center of
+proportional to its volume times the energy density at the center of
 the ball plus three times the pressure at that point.
 \end{quote}
 
