fix up helpers, charter

--- a/math-0603190v5/rel_sing.tex
+++ b/math-0603190v5/rel_sing.tex
@@ -16,10 +16,36 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.1}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+\usepackage[full]{textcomp}
+\usepackage[scaled=.95]{XCharter}% lining figures in math, osf in text
+\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+\usepackage[cal=cm]{mathalpha}
+\usepackage{eulervm}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\tolerance=2000
+\hbadness=2000
 
-\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\input{../helpers/fix-underbrace.tex}
+%\input{../helpers/psu-sc-headers.tex}
+
+\usepackage{cite}
+\pagestyle{plain}
 \sloppy
 \raggedbottom
 
