--- a/helpers/fixarxiv-charter-euler.tex
+++ b/helpers/fixarxiv-charter-euler.tex
@@ -15,8 +15,8 @@ bookmarksopenlevel=10
 \usepackage[full]{textcomp}
 \usepackage[osf]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage[cal=cm]{mathalpha}
+\usepackage{eulervm}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
