--- a/helpers/fixarxiv-palatino-newpx.tex
+++ b/helpers/fixarxiv-palatino-newpx.tex
@@ -15,12 +15,14 @@ bookmarksopenlevel=10
 }
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[largesc,osf]{newpxtext}
+\usepackage[largesc]{newpxtext}
 \usepackage[smallerops]{newpxmath}
-\linespread{1.05}
+\usepackage[cal=cm]{mathalfa}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
