--- a/1912.10642/ct-notes-new.tex
+++ b/1912.10642/ct-notes-new.tex
@@ -44,7 +44,7 @@ bookmarksopenlevel=10
 \usepackage{tikz-cd}
 \usepackage{wasysym}
 \usepackage{adjustbox}
-\usepackage{microtype}
+%\usepackage{microtype}
 \usepackage{chngcntr}
 \usepackage{tocbibind}
 \usepackage{csquotes}
