euler and stuff

--- a/1612.09375-ams-ish/macros.tex
+++ b/1612.09375-ams-ish/macros.tex
@@ -13,10 +13,10 @@
 \usepackage{latexsym}
 \usepackage{amssymb,amsmath}
 \usepackage{bbm}
-\usepackage{mathrsfs}
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{multicol}
+\usepackage[cal=cm,scr=esstix]{mathalpha}
 
 \usepackage{url}
 \urlstyle{same}
