euler and stuff

--- a/1612.09375-ams-ish/BasicCategoryTheory-Charter.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory-Charter.tex
@@ -13,7 +13,6 @@
 \usepackage[osf]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
-\usepackage[cal=cm]{mathalpha}
 
 \usepackage{titlesec}
 %\titlelabel{\thetitle.\quad}
@@ -36,11 +35,9 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[papersize={5.9in, 8.0in}, left=.5in, right=.5in, top=.8in, bottom=.8in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\sloppy
 
 % different \sum and also fixes underbraces
-\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace}
 
 % optional
