--- a/1612.09375-ams-ish/BasicCategoryTheory-Charter-euler.tex
+++ b/1612.09375-ams-ish/BasicCategoryTheory-Charter-euler.tex
@@ -19,7 +19,7 @@
 %\titlelabel{\thetitle.\quad}
 %\usepackage[dotinlabels]{titletoc}
 
-\input{macros}          % Macros
+\input{macros-euler}          % Macros
 \input{theoremenvts}    % Theorem environments
 
 \newcommand{\mapsfrom}{\mathrel{\reflectbox{\ensuremath{\mapsto}}}}
