--- a/2007.00733/QG_no_strings_attached.tex
+++ b/2007.00733/QG_no_strings_attached.tex
@@ -1,4 +1,4 @@
-\documentclass[aps,prl,reprint,twocolumn,superscriptaddress,longbibliography,nofootinbib,floatfix,showpacs]{revtex4-1}
+\documentclass[aps,prl,onecolumn,superscriptaddress,longbibliography,nofootinbib,floatfix,showpacs,12pt]{revtex4-1}
 \usepackage{epsfig}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{mathrsfs}
@@ -8,13 +8,33 @@
 \usepackage{verbatim}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage[colorlinks]{hyperref}
 \usepackage{ifthen}
 \usepackage{forloop}
 \usepackage[english]{babel}
 \usepackage{mathbbol}
 \usepackage[usenames]{color}
 \usepackage[normalem]{ulem}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
 
 \definecolor{darkgreen}{rgb}{0.2,0.6,0}
@@ -218,7 +238,7 @@ In order to exhibit the basic mechanism underlying our construction we first con
 As the incoming and outgoing particles are distinguishable, the amplitude is determined by the single $\mans$-channel tree-level Feynman diagram \autoref{fig:feynman}.
 %
 \begin{figure}
-	\includegraphics[width=0.5\columnwidth]{s_channel_two_fields_with_field_labels}
+	\includegraphics[width=3in]{s_channel_two_fields_with_field_labels}
 	\caption{Feynman diagram encoding the amplitude $\mathcal{A}_\mans$ associated with $\mans$-channel scattering of two distinct scalar particles mediated by graviton exchange. All vertices and propagators are effective quantities that include all quantum corrections.}
 	\label{fig:feynman}
 \end{figure}
@@ -323,7 +343,7 @@ The role of the Regge behaviour \eqref{Reggebehavior} is thus manifestly differe
 the exponential decrease and causality of the amplitude \cite{DAppollonio:2015fly}.
 %
 \begin{figure}
-	\includegraphics[width=\columnwidth]{partialwaveamplitudea2}
+	\includegraphics[width=5in]{partialwaveamplitudea2}
 	\caption{Illustration of the partial-wave amplitude $|a_2(\mans)|$ for our \modelname{} with $c_C = 1$ (blue solid line) and \GR{} (orange solid line). The horizontal lines show the  bound $|a_2(\mans)| = 1$ (solid black line) and the asymptotic value $\lim_{\mans \rightarrow \infty} |a_2| = 1/60$ (dash-dotted line). The dashed blue line indicates the amplitude from the truncated \modelname{} where the propagators \eqref{infiniteres} are expanded up to order $\mans^{250}$.}
 	\label{fig:amplitude}
 \end{figure}
@@ -394,7 +414,7 @@ Thus the inclusion of the contact interaction softens the high-energy behaviour 
 
 %
 \begin{figure}
-	\includegraphics[width=\columnwidth]{asa2}
+	\includegraphics[width=5in]{asa2}
 	\caption{Illustration of the $\mant$-channel amplitude \eqref{amps} in the forward-scattering limit with $\mant = -0.001 M_{\rm Pl}^2$ held fixed with parameters $c_R = c_C = 10$  and $c_t = 10^3$  (solid line). The result obtained from \GR{} is given by the dashed line for comparison. The horizontal lines indicates the asymptotic value of the amplitude as $\mans \rightarrow \infty$. Inset: Illustration of the $\mans$-channel amplitude \eqref{amps} with (solid line) and without (dashed line) the contribution of the scalar self-interaction \eqref{matterpara}.}
 	\label{fig:forwardamplitude}
 \end{figure}
