--- a/helpers/fixarxiv-palatino-mathpazo.tex
+++ b/helpers/fixarxiv-palatino-mathpazo.tex
@@ -14,14 +14,14 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7.1in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/cmrsum}
+\input{../helpers/minion_sum}
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
